[package]
edition = "2021"
name = "my_httpie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "3", features = ["derive"]}
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = {version = "0.11", features = ["json"]}
syntect = "4"
tokio = {version = "1", features = ["full"]}
